# pokedex-terminal-python

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: poke_api_client.py  poke_games.py  pokedex.py  pokedex_logo.txt  utils.py
