[project]
name = "pokedex-terminal-python"
version = "0.1.0"
description = "Pokédex interactiva navegable desde terminal usando PokeAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests>=2.32.5"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "A"]
ignore = ["E501"]
